<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.my.home</groupId>
	<artifactId>ffxiv-gametime</artifactId>
	<version>2.1</version>
	<packaging>jar</packaging>
	<name>ffxiv-gametime</name>
	<!-- Properties -->
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
	</properties>
	<!-- Dependencies -->
	<dependencies>
		<!-- JavaFX Controls -->
		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-controls</artifactId>
		    <version>21.0.6</version>
		</dependency>
		<!-- JavaFX Graphics -->
		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-graphics -->
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-graphics</artifactId>
		    <version>21.0.6</version>
		</dependency>
		<!-- JavaFX Media -->
		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-media -->
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-media</artifactId>
		    <version>21.0.6</version>
		</dependency>
		<!-- JavaFX FXML -->
		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-fxml</artifactId>
		    <version>21.0.6</version>
		</dependency>
		<!-- Java Native Access -->
		<!-- https://mvnrepository.com/artifact/net.java.dev.jna/jna -->
		<dependency>
		    <groupId>net.java.dev.jna</groupId>
		    <artifactId>jna</artifactId>
		    <version>5.16.0</version>
		</dependency>
		<!-- Java Native Access Platform -->
		<!-- https://mvnrepository.com/artifact/net.java.dev.jna/jna-platform -->
		<dependency>
		    <groupId>net.java.dev.jna</groupId>
		    <artifactId>jna-platform</artifactId>
		    <version>5.16.0</version>
		</dependency>
		<!-- System Hook -->
		<!-- https://mvnrepository.com/artifact/lc.kra.system/system-hook -->
		<dependency>
			<groupId>lc.kra.system</groupId>
			<artifactId>system-hook</artifactId>
			<version>3.8</version>
		</dependency>
		<!-- Apache Log4j Core -->
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-core</artifactId>
		    <version>2.24.3</version>
		</dependency>
		<!-- Apache Log4j API -->
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-api</artifactId>
		    <version>2.24.3</version>
		</dependency>
	</dependencies>
	<!-- Build -->
	<build>
		<plugins>
			<!-- Maven Compiler Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>21</release>
				</configuration>
			</plugin>
			<!-- JavaFX Maven Plugin -->
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<executions>
					<execution>
						<!-- Default configuration for running -->
						<!-- Usage: mvn clean javafx:run -->
						<id>default-cli</id>
						<configuration>
							<release>21</release>
							<jlinkImageName>ffxiv-gametime</jlinkImageName>
							<launcher>launcher</launcher>
							<mainClass>fr.my.home.ffxivgametime.MyApp</mainClass>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- Maven Shade Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<shadedArtifactAttached>true</shadedArtifactAttached>
							<shadedClassifierName>project-classifier</shadedClassifierName>
							<outputFile>shade\${project.artifactId}.jar</outputFile>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>fr.my.home.ffxivgametime.Launcher</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
